--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -766,7 +766,7 @@ section {
 }
 
 .clients img {
-  max-width: 45%;
+  max-width: 88%;
   transition: all 0.4s ease-in-out;
   display: inline-block;
   padding: 15px 0;
@@ -1893,4 +1893,16 @@ section {
 }
 #rolan{
   max-width: 88% !important;
+}
+#rapifix{
+  max-width: 88% !important;
+}
+#row-content-center{
+  display: flex;
+  justify-content: center;
+}
+#abt-us-li{
+  font-size: 20px;
+  font-weight: 300;
+  color: #062a46;
 }
